# avito

./: .gitignore  README.md  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_ad_category_ad_image_alter_ad_author.py  0004_remove_ad_address.py  0005_selection.py  0006_alter_selection_options_category_slug_and_more.py  0007_alter_category_slug.py  0008_alter_category_slug.py  0009_alter_category_slug.py  0010_alter_category_slug.py  0011_alter_category_slug.py  0012_alter_category_slug.py
config/: settings.py  urls.py
fixtures/: ads.json  locations.json  users.json
users/: models.py  serializers.py  urls.py  utils.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py  0004_alter_user_age.py  0005_user_birth_date_alter_user_email.py  0006_alter_user_email.py
